--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
+[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+
 version = "1.0"
 group = "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "modid"
@@ -73,5 +75,11 @@ processResources {
     // copy everything else except the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
+    }
+	
+    tasks.withType(JavaCompile) {
+
+        options.encoding = "UTF-8"
+
     }
 }
