--- a/build.gradle
+++ b/build.gradle
@@ -83,3 +83,10 @@ processResources {
 
     }
 }
+repositories {
+    maven { url 'https://maven.blamejared.com' }
+}
+
+dependencies {
+    compile "vazkii.patchouli:Patchouli:1.0-7.9"
+}
