--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
-version = "1.2.4"
+version = "1.2.5"
 group = "net.langball"
 archivesBaseName = "lastsmith"
 
@@ -23,11 +23,15 @@ compileJava {
 minecraft {
     version = "1.12.2-14.23.5.2768"
     runDir = "run"
+    useDepAts = true
 
+    // the mappings can be changed at any time, and must be in the following format.
+    // snapshot_YYYYMMDD   snapshot are built nightly.
+    // stable_#            stables are built at the discretion of the MCP team.
+    // Use non-default mappings at your own risk. they may not always work.
+    // simply re-run your setup task after changing the mappings to update your workspace.
     mappings = "snapshot_20171003"
-	
-	 replace "@version@", project.version
-
+    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
 
@@ -96,8 +100,8 @@ dependencies {
     runtime ("mezz.jei:jei_1.12.2:4.14.3.242"){
 	force = true
 	}
-	deobfCompile "slashblade:SlashBlade:mc1.12:r15"
-    compile "vazkii.patchouli:Patchouli:1.0-10.51"
+	deobfCompile "slashblade:SlashBlade:mc1.12:r17"
+    compile "vazkii.patchouli:Patchouli:1.0-16.84"
 	deobfCompile "baubles:Baubles:1.12:1.5.2"
 	deobfCompile "vazkii.botania:Botania:r1.10-357.7"
 	deobfCompile "thaumcraft:Thaumcraft:1.12.2:6.1.BETA26"
